--- a/frontend/src/css_file/dashboard.css
+++ b/frontend/src/css_file/dashboard.css
@@ -23,7 +23,7 @@ body {
      position: relative;
      top: 0;
      bottom: 0;
-     height: 110vh;
+     height: 100vh;
      left: 0;
      background: #fff;
      width: 280px;
@@ -97,13 +97,14 @@ a:hover {
 
 .main-top {
      display: flex;
-     width: 100%;
+     margin-left: 10px;
+     /* width: 100%; */
 }
 
 .main-top i {
-     position: absolute;
+     position: relative;
      right: 0;
-     margin: 10px 30px;
+     margin-left: 80px;
      color: rgb(110, 109, 109);
      cursor: pointer;
 }
@@ -114,7 +115,7 @@ a:hover {
 }
 
 .main-skills .card {
-     width: 25%;
+     width: 22%;
      height: 10%;
      margin: 10px;
      background: #2681ff;
@@ -167,4 +168,111 @@ a:hover {
      background: #fff;
      border-color: #4e8fe4;
      color: #4e8fe4;
+}
+
+input[type="date"] {
+     background-color: #0080ff;
+     padding: 4px;
+     position: absolute;
+     transform: translate(-50%, -50%);
+     top: 5%;
+     left: 28%;
+     font-family: "Roboto Mono", monospace;
+     color: #ffffff;
+     font-size: 15px;
+     border: none;
+     outline: none;
+     border-radius: 5px;
+}
+
+::-webkit-calendar-picker-indicator {
+     background-color: #ffffff;
+     padding: 5px;
+     cursor: pointer;
+     border-radius: 3px;
+}
+
+table {
+     /* display: inline; */
+     position: absolute;
+     width: 56%;
+     height: 60%;
+     left: 17.5%;
+     top: 53%;
+     border-collapse: collapse;
+}
+
+.table h2 {
+     color: #3f4441;
+     top: 47%;
+     left: 18%;
+     position: absolute;
+}
+
+.table a {
+     color: #5319f2;
+     background-color: transparent;
+     top: 47%;
+     left: 69%;
+     position: absolute;
+     width: 75px;
+}
+
+th,
+td {
+     border: none;
+     padding: 10px;
+     text-align: left;
+}
+
+th,
+td {
+     border-bottom: 3px solid #ddd;
+     /* Thicker border for the header */
+}
+.recent-updates {
+     height: 220px;
+     width: 330px;
+     position: absolute;
+     top: 15%;
+     left: 77%;
+     border-radius: 20px;
+}
+.recent-updates .card{
+     width: 90%;
+     height: 22%;
+     margin-left: 8px;
+     background: #2681ff;
+     color: #fff;
+     text-align: left;
+     border-radius: 20px;
+     padding: 10px;
+}
+
+.recent-updates p {
+     text-align: center;
+     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.recent-updates i {
+     padding: 5px;
+}
+
+.graph {
+     width: 380px;
+     height: 200px;
+     position: absolute;
+     top: 50%;
+     left: 74%;
+     border-radius: 20px;
+     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+}
+
+.graph .bar {
+     width: 380px;
+     height: 200px;
+     position: absolute;
+     top: 110%;
+     border-radius: 20px;
+     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
 }
