--- a/frontend/src/css_file/add_product.css
+++ b/frontend/src/css_file/add_product.css
@@ -81,7 +81,7 @@ form {
   position: relative;
 }
 
-.title {
+.product_title {
   color: #fff;
   font-weight: 500;
   font-size: 1.5rem;
@@ -169,15 +169,15 @@ textarea.input {
   right: 50%;
 }
 
-.input-container.focus label {
+.input-container label {
   top: 0;
   transform: translateY(-50%);
   left: 25px;
   font-size: 0.8rem;
 }
 
-.input-container.focus span:before,
-.input-container.focus span:after {
+.input-container span:before,
+.input-container span:after {
   width: 50%;
   opacity: 1;
 }
@@ -187,7 +187,7 @@ textarea.input {
   position: relative;
 }
 
-.contact-info .title {
+.contact-info .product_title {
   color: #4b3cd0;
 }
 
@@ -340,7 +340,7 @@ textarea.input {
     font-size: 0.8rem;
   }
 
-  .title {
+  .product_title {
     font-size: 1.15rem;
   }
 
