--- a/frontend/src/css_file/logos.css
+++ b/frontend/src/css_file/logos.css
@@ -4,6 +4,7 @@
      text-align: center;
      /* Centers the logos horizontally */
      margin-top: -250px;
+     padding-bottom: 20px;
 }
 
 .brand-logos {
