working on profile

--- a/frontend/src/css_file/loginStyle.css
+++ b/frontend/src/css_file/loginStyle.css
@@ -230,6 +230,7 @@ form.sign-in-form {
   height: 41px;
   font-weight: 600;
   font-size: 0.8rem;
+  margin-right: 70%;
 }
 
 .right-panel .image,
@@ -345,6 +346,7 @@ form.sign-in-form {
     width: 110px;
     height: 35px;
     font-size: 0.7rem;
+    margin-right: 75%;
   }
 
   .container:before {
