--- a/frontend/src/css_file/dashboard.css
+++ b/frontend/src/css_file/dashboard.css
@@ -31,23 +31,27 @@ body {
      box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
 }
 
-.logo {
+.Brand-Logo {
      text-align: center;
      display: flex;
      margin: 10px 0 0 10px;
 }
 
-.logo img {
-     width: 45px;
-     height: 45px;
-     border-radius: 50%;
+.Brand-Logo i {
+     opacity: 0.7;
+     color: #fff;
+     font-size: 24px;
+     padding: 10px;
+     border-radius: 4px;
+     background-color: #0D6EFD;
+     transition: all 0.3s ease;
 }
 
-.logo span {
-     font-weight: bold;
-     padding-left: 5px;
-     padding-bottom: 16px;
-     font-size: 18px;
+.Brand-Logo span {
+     color: #0D6EFD;
+     font-size: 22px;
+     font-family: Papyrus, fantasy;
+     transition: color 0.3s ease;
 }
 
 a {
@@ -101,12 +105,11 @@ a:hover {
      /* width: 100%; */
 }
 
-.main-top i {
+#date {
+     display: flex;
      position: relative;
-     right: 0;
-     margin-left: 80px;
-     color: rgb(110, 109, 109);
-     cursor: pointer;
+     top: 20px;
+     left: 100px;
 }
 
 .main-skills {
@@ -247,6 +250,7 @@ td {
      background: #2681ff;
      color: #fff;
      text-align: left;
+     margin-bottom: 10px;
      border-radius: 20px;
      padding: 10px;
 }
@@ -254,6 +258,7 @@ td {
 .recent-updates p {
      text-align: center;
      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     padding: 10px;
 }
 
 .recent-updates i {
