--- a/frontend/src/css_file/navbar.css
+++ b/frontend/src/css_file/navbar.css
@@ -21,7 +21,7 @@ body {
     transition: all 0.3s ease
 }
 
-.brand-logo {
+.brand-Logo {
     display: flex;
     gap: 8px;
     align-items: center;
@@ -29,11 +29,11 @@ body {
     transition: transform 0.3s ease;
 }
 
-.brand-logo:hover {
+.brand-Logo:hover {
     transform: scale(1.05);
 }
 
-.brand-logo i {
+.brand-Logo i {
     opacity: 0.7;
     color: #fff;
     font-size: 22px;
@@ -43,7 +43,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.brand-logo span {
+.brand-Logo span {
     color: #0D6EFD;
     font-size: 22px;
     font-family: Papyrus, fantasy;
