Product detail page profile, wish list, like button, password change and many more functions have been added

--- a/frontend/src/css_file/navbar.css
+++ b/frontend/src/css_file/navbar.css
@@ -326,6 +326,15 @@ body {
     display: block;
 }
 
+.Link {
+    width: 70px;
+    margin-left: -25px;
+}
+
+.Link:hover {
+    background-color: transparent;
+}
+
 /* Responsive Styles */
 @media screen and (max-width: 845px) {
     .searchbar input {
