--- a/frontend/src/css_file/Dash_Alert.css
+++ b/frontend/src/css_file/Dash_Alert.css
@@ -13,6 +13,10 @@
      animation: fadeInOut 5s ease-in-out;
 }
 
+.message {
+     color: #fff;
+}
+
 @keyframes fadeInOut {
      0% {
           opacity: 0;
