--- a/frontend/src/css_file/ProductDetails.css
+++ b/frontend/src/css_file/ProductDetails.css
@@ -46,7 +46,7 @@
 }
 
 .quantity-control input {
-     width: 7%;
+     width: 50px;
      font-size: 15px;
      border: 2px solid #007BFF;
      padding: 5px;
@@ -58,7 +58,7 @@
      background-color: #007BFF;
      color: #fff;
      border: none;
-     border-radius: 5px;
+     border-radius: 100px;
      padding: 5px 10px;
      font-size: 15px;
      cursor: pointer;
@@ -121,6 +121,84 @@
      color: #fff;
 }
 
+.not-found-container {
+     text-align: center;
+     margin-top: 100px;
+}
+
+.error-code {
+     font-size: 120px;
+     font-weight: bold;
+     color: #ff4b5c;
+}
+
+.error-message {
+     font-size: 36px;
+     margin: 20px 0;
+     color: #333;
+}
+
+p {
+     font-size: 18px;
+     color: #312525;
+}
+
+.home-link {
+     display: inline-block;
+     padding: 10px 20px;
+     background-color: #007bff;
+     color: #fff;
+     border-radius: 5px;
+     text-decoration: none;
+     margin-top: 20px;
+     font-size: 18px;
+}
+
+.home-link:hover {
+     background-color: #0056b3;
+}
+
+/* like button */
+.product_page .like-btn {
+     position: absolute;
+     margin: 15px;
+     margin-left: 22px;
+     font-size: 27px;
+     color: #707070;
+     cursor: pointer;
+     transition: color 0.3s ease;
+}
+
+.product_page .like-btn:hover {
+     color: #333;
+}
+
+.scroll-button {
+     background-color: hsl(0, 0%, 90%);
+     border: none;
+     padding: 10px;
+     cursor: pointer;
+     font-size: 24px;
+     position: absolute;
+     top: 50%;
+     transform: translateY(-50%);
+     z-index: 5;
+}
+
+.scroll-button.left {
+     left: -15px;
+     /* Position the left button */
+}
+
+.scroll-button.right {
+     right: -15px;
+     /* Position the right button */
+}
+
+.scroll-button:hover {
+     background-color: hsl(0, 0%, 80%);
+}
+
 /* Responsive Layout for small screens */
 @media (max-width: 768px) {
      .product_page {
@@ -131,5 +209,9 @@
      .product_page img {
           margin-left: 0;
           width: 100%;
+     }
+
+     .scroll-button {
+          visibility: hidden;
      }
 }
