--- a/frontend/src/css_file/product.css
+++ b/frontend/src/css_file/product.css
@@ -290,7 +290,7 @@ body::-webkit-scrollbar-thumb:hover {
      display: flex;
      flex-wrap: wrap;
      gap: 30px;
-     justify-content: center;
+     justify-content: left;
      align-items: center;
      padding: 10px;
 }
@@ -298,7 +298,7 @@ body::-webkit-scrollbar-thumb:hover {
 .product-card {
      position: relative;
      max-width: 255px;
-     height: 380px;
+     height: 400px;
      width: 100%;
      border-radius: 25px;
      padding: 20px 30px 30px 30px;
@@ -364,7 +364,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .product-card .product-details p {
-     font-size: 10px;
+     font-size: 12px;
      padding-top: 5px;
      font-weight: 400;
      color: #333;
@@ -453,12 +453,16 @@ body::-webkit-scrollbar-thumb:hover {
      color: #707070;
 }
 
+.link:hover {
+     background-color: transparent;
+}
+
 .product-card .button {
      position: relative;
      height: 40px;
      width: 100%;
      border-radius: 25px;
-     margin-top: 18%;
+     margin-top: 10%;
      overflow: hidden;
 }
 
