--- a/frontend/src/css_file/loginStyle.css
+++ b/frontend/src/css_file/loginStyle.css
@@ -69,7 +69,7 @@ form.sign-in-form {
 .input-field {
   max-width: 380px;
   width: 100%;
-  background-color: #f0f0f0;
+  background-color: #fff;
   margin: 10px 0;
   height: 55px;
   border-radius: 55px;
@@ -77,12 +77,13 @@ form.sign-in-form {
   grid-template-columns: 15% 85%;
   padding: 0 0.4rem;
   position: relative;
+  border: 2px solid #2c98e1;
 }
 
 .input-field i {
   text-align: center;
   line-height: 55px;
-  color: #acacac;
+  color: #2c98e1;
   transition: 0.5s;
   font-size: 1.1rem;
 }
