--- a/frontend/src/css_file/product.css
+++ b/frontend/src/css_file/product.css
@@ -290,7 +290,7 @@ body::-webkit-scrollbar-thumb:hover {
      display: flex;
      flex-wrap: wrap;
      gap: 30px;
-     justify-content: left;
+     justify-content: center;
      align-items: center;
      padding: 10px;
 }
