--- a/frontend/src/css_file/searchProducts.css
+++ b/frontend/src/css_file/searchProducts.css
@@ -1,13 +1,17 @@
-.search-results-container{
+.search-results-container {
      margin-left: 10%;
-     margin-right: 10%;
+     margin-right: 10%;     
 }
 
-.delivery-date{
+.search-results-container .featured-products{
+     justify-content: left;
+}
+
+.delivery-date {
      margin-top: 15px;
      font-size: 16px;
 }
 
-.delivery-date i{
+.delivery-date i {
      padding-right: 5px;
 }
